force-app/integration-logs-framework/main/default/objects/IEF_Plugin__mdt/IEF_Plugin__mdt.object-meta.xml
<CustomObject>
    <description
  >Unified registry for all plugin types (Trigger, Service, Field, Card).</description>
    <label>IEF Plugin</label>
    <pluralLabel>IEF Plugins</pluralLabel>
</CustomObject>