force-app/integration-logs-framework/main/default/objects/IEF_Plugin__mdt/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description
  >Fully qualified Apex class name for Type.forName() resolution.</description>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>