force-app/integration-logs-framework/main/default/objects/IEF_Plugin__mdt/fields/Contract_Version__c.field-meta.xml
<CustomField>
    <fullName>Contract_Version__c</fullName>
    <description
  >Contract version the plugin was written against. Major bump is breaking; minor is additive.</description>
    <label>Contract Version</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue>1.0</defaultValue>
</CustomField>