force-app/integration-logs-framework/main/default/objects/IEF_Plugin__mdt/fields/DeclaredFields__c.field-meta.xml
<CustomField>
    <fullName>DeclaredFields__c</fullName>
    <description
  >Comma-separated field API names this plugin declares. Used by FIELD type plugins.</description>
    <label>Declared Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>