force-app/integration-logs-framework/main/default/objects/IEF_Plugin__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description
  >Execution or display order. Lower values execute first.</description>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>