force-app/integration-logs-framework/main/default/objects/IEF_Plugin__mdt/fields/PluginType__c.field-meta.xml
<CustomField>
    <fullName>PluginType__c</fullName>
    <description
  >The type of plugin (Trigger, Service, Field, or Card).</description>
    <label>Plugin Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRIGGER</fullName>
            </value>
            <value>
                <fullName>SERVICE</fullName>
            </value>
            <value>
                <fullName>FIELD</fullName>
            </value>
            <value>
                <fullName>CARD</fullName>
            </value>
            <value>
                <fullName>ACTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>